Westeros: Improve splash.

--- a/lib/splash.html
+++ b/lib/splash.html
@@ -41,16 +41,15 @@
         font: message-box;
         pointer-events: none;
         overflow: hidden;
-        background: linear-gradient(175deg, #052036be, #05203600 70%);
-        box-shadow: inset 0px 0px 0px 2px #00000049;
+        background: linear-gradient(150deg, #011526 30%, #c853ff);
       }
 
       #waves {
         position: absolute;
         left: 0px;
         right: 0px;
-        top: calc(50% - 30px);
-        fill: rgba(0, 0, 0, 0.1);
+        top: 65%;
+        fill: rgba(0, 0, 0, 0.2);
         will-change: transform;
         transform-origin: top;
         animation: 30s ease-in-out infinite normal;
@@ -60,7 +59,7 @@
 
       #message {
         padding: 20px;
-        color: #d6e0ea;
+        color: #fff;
         text-align: center;
         font-weight: 500;
         display: table-cell;
