--- a/lib/splash.html
+++ b/lib/splash.html
@@ -80,33 +80,32 @@
         />
       </svg>
     </div>
-    <div id="message">
-    </div>
+    <div id="message"></div>
     <script>
-    require('electron').ipcRenderer.on('progress', (event, data) => {
-      const {step,locale} = data;
-      switch(step){
-        case 'waiting':
-        document.getElementById('message').innerHTML = 'Le serveur cherche une table libre';
-          break;
-        case 'boot':
-        document.getElementById('message').innerHTML = 'On allume la machine à café';
-          break;
-        case 'webpack':
-        document.getElementById('message').innerHTML = 'Emballage du chocolat par la marmotte';
-        break;
-        case 'start':
-        document.getElementById('message').innerHTML = `On voit le bout du tunnel`;
-        break;
-        case 'restore-session':
-        document.getElementById('message').innerHTML = 'On ressort de vieux dossiers';
-        break;
-        case 'ready':
-        document.getElementById('message').innerHTML = 'Le cake sort du four';
-        break;
-      }
-    })
+      require('electron').ipcRenderer.on('progress', (event, data) => {
+        const {step, locale} = data;
+        const elem = document.getElementById('message');
+        switch (step) {
+          case 'waiting':
+            elem.innerHTML = 'Le serveur cherche une table libre';
+            break;
+          case 'boot':
+            elem.innerHTML = 'On allume la machine à café';
+            break;
+          case 'webpack':
+            elem.innerHTML = 'Emballage du chocolat par la marmotte';
+            break;
+          case 'start':
+            elem.innerHTML = `On voit le bout du tunnel`;
+            break;
+          case 'restore-session':
+            elem.innerHTML = 'On ressort de vieux dossiers';
+            break;
+          case 'ready':
+            elem.innerHTML = 'Le cake sort du four';
+            break;
+        }
+      });
     </script>
-   
   </body>
 </html>
