--- a/lib/splash.html
+++ b/lib/splash.html
@@ -50,7 +50,7 @@
         font: message-box;
         pointer-events: none;
         overflow: hidden;
-        background: linear-gradient(150deg, #011526 30%, #c853ff);
+        background: linear-gradient(150deg, #011526 20%, #c853ff);
       }
 
       #waves {
@@ -94,7 +94,12 @@
         bottom: 36%;
         height: 8px;
         margin: 2px;
-        background: linear-gradient(90deg, rgb(255, 20, 97), rgb(254, 133, 6), rgb(255, 20, 97));
+        background: linear-gradient(
+          90deg,
+          rgb(255, 20, 97),
+          rgb(254, 133, 6),
+          rgb(255, 20, 97)
+        );
         background-size: 200% 200%;
         border-radius: 6px;
         transition: width 2s;
